--- a/SmartBartender/SmartBartender.csproj
+++ b/SmartBartender/SmartBartender.csproj
@@ -72,6 +72,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Data\Classes\AlcoDataBaseMethods.cs" />
     <Compile Include="Data\Classes\ClientDataBaseMethods.cs" />
     <Compile Include="Data\Classes\DataBaseConnection.cs" />
     <Compile Include="Data\Model\AgeType.cs">
@@ -125,6 +126,18 @@
     <Compile Include="Data\Model\TimesOfDayType.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Pages\AccountPage.xaml.cs">
+      <DependentUpon>AccountPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\AddAlcoPage.xaml.cs">
+      <DependentUpon>AddAlcoPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SupplyOfAlcoholPage.xaml.cs">
+      <DependentUpon>SupplyOfAlcoholPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Resources\MenuItem.xaml.cs">
+      <DependentUpon>MenuItem.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windws\Auth.xaml.cs">
       <DependentUpon>Auth.xaml</DependentUpon>
     </Compile>
@@ -143,6 +156,22 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\AccountPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\AddAlcoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SupplyOfAlcoholPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Resources\MenuItem.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windws\Auth.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -186,14 +215,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Pages\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Resources\icon.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\alcohol.png" />
+    <Resource Include="Resources\user.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\Model\Model1.Context.tt">
