--- a/SmartBartender/SmartBartender.csproj
+++ b/SmartBartender/SmartBartender.csproj
@@ -75,9 +75,7 @@
     <Compile Include="Data\Classes\AlcoDataBaseMethods.cs" />
     <Compile Include="Data\Classes\ClientDataBaseMethods.cs" />
     <Compile Include="Data\Classes\DataBaseConnection.cs" />
-    <Compile Include="Data\Model\AgeType.cs">
-      <DependentUpon>Model1.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Data\Classes\ParametersDataBaseMethods.cs" />
     <Compile Include="Data\Model\Alcohol.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -126,7 +124,7 @@
     <Compile Include="Data\Model\sysdiagrams.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Data\Model\TimesOfDayType.cs">
+    <Compile Include="Data\Model\TimesOfTheDay.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Pages\AccountPage.xaml.cs">
@@ -134,6 +132,15 @@
     </Compile>
     <Compile Include="Pages\AddAlcoPage.xaml.cs">
       <DependentUpon>AddAlcoPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CocktailsPage.xaml.cs">
+      <DependentUpon>CocktailsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\CreateGeneratorPage.xaml.cs">
+      <DependentUpon>CreateGeneratorPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\GeneratorPage.xaml.cs">
+      <DependentUpon>GeneratorPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\SupplyOfAlcoholPage.xaml.cs">
       <DependentUpon>SupplyOfAlcoholPage.xaml</DependentUpon>
@@ -164,6 +171,18 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\AddAlcoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\CocktailsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\CreateGeneratorPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\GeneratorPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -240,6 +259,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Resource Include="Resources\robot.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.6.1\build\MaterialDesignThemes.targets')" />
